# nostria

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  DEVELOPER.md  DEVELOPMENT.md  Dockerfile  EVENTSERVICE_REFCOUNT_INTEGRATION.md  FAVORITES_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_NOTIFICATIONS_FIX.md  IMPROVEMENTS.md  NOSTR_EMBED_PREVIEW_IMPLEMENTATION.md  NOSTR_EVENT_EMBEDDING.md  NOSTR_URL_SUPPORT.md  NOTE_EVENT_PREVIEW.md  OBSERVED_RELAYS_FEATURE.md  PRD-example.md  PRD.md  PUBLISHING_FIX_TARGETED_NOTIFICATIONS.md  PUBLISHING_PATTERN.md  PUBLISH_CUSTOM_EVENT_FEATURE.md  QR_CODE_ENHANCEMENT.md  README.md  ROUTER_STATE_EXAMPLE.md  SCROLL_SIGNALS_GUIDE.md  SECURITY.md  TESTING.md  USER_DATA_RECYCLING_SYSTEM.md  _theme-colors.scss  angular.json  check-issues.ps1  close.bat  docker-compose.yml  drag-drop-test.md  (+19 more)
.github/: copilot-instructions.md
.ralphy/: config.yaml  progress.txt
docs/: ACCOUNT_AVATARS_FIX.md  ACCOUNT_SPECIFIC_NOTIFICATIONS_FIX.md  ACCOUNT_SWITCH_LOADING_FIX.md  ACTIVITY_NOTIFICATIONS_VISUAL_IMPROVEMENTS.md  ADDRESSABLE_VIDEO_EVENTS_NIP71.md  ADD_PERSON_FEATURE.md  ALGORITHM_ADMINISTRATION.md  ALGORITHM_PAGE_ACCOUNT_SWITCHING.md  ARTICLE_COMMENTS_IMPLEMENTATION.md  ARTICLE_EDITOR_IMAGE_UPLOAD.md  ARTICLE_PREVIEW_DISPLAY_NAMES.md  ARTICLE_PREVIEW_HOVER_CARDS.md  ARTICLE_PREVIEW_HOVER_FIXES_SUMMARY.md  ARTICLE_PREVIEW_NOSTR_PARSING.md  ASYNC_ARTICLE_PREVIEW_LOADING.md  AUDIO_PLAYER_REVAMP.md  BADGES_ROUTE_UPDATE.md  BADGES_UI_AND_STORAGE_IMPROVEMENTS.md  BADGE_HOVER_CARD_INTEGRATION.md  BADGE_LOADING_PERFORMANCE_OPTIMIZATION.md  BADGE_RENDERING_IN_THREADS.md  BASE64_CONTENT_SUPPORT.md  BASE64_CONTENT_TESTING.md  BOOKMARKS_IMPROVEMENTS.md  BROWSER_EXTENSION_SIGNING_DIALOG.md  BUILD_INFO_DISPLAY.md  CARD_STRETCHING_FIX.md  CENTRALIZED_ACCOUNT_STATE.md  CIRCULAR_DEPENDENCY_FIX.md  CIRCULAR_DEPENDENCY_FIX_NOTIFICATIONS.md  CLIENT_TAG_DISPLAY.md  CLIENT_TAG_IMPLEMENTATION.md  CLIENT_TAG_SETTINGS.md  COINOS_WALLET_INTEGRATION.md  COMPACT_MODE_HOVER_CARD_FIX.md  COMPLETE_LISTS_IMPLEMENTATION.md  CONTENT_NOTIFICATIONS.md  CONTENT_NOTIFICATIONS_INTEGRATION.md  CONTENT_NOTIFICATIONS_QUICKSTART.md  CONTENT_NOTIFICATIONS_SUMMARY.md  (+271 more)
e2e/: fixtures.ts  global-setup.ts  global-teardown.ts
public/: demo.html  manifest.webmanifest  notification-sw.js
scripts/: check-frame-protection.js  check-nsec.sh  gen-ios-splash.ps1  normalize-line-endings.ps1  perf-memory.mjs  perf-profile.mjs  (+14 more)
src-tauri/: Cargo.toml  build.rs  image_thumbnail.rs  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: android-icon-manifest.json  icon.icns
src-tauri/media-session/android/: build.gradle.kts  settings.gradle
src-tauri/media-session/android/src/main/: AndroidManifest.xml
src-tauri/media-session/android/src/main/java/app/nostria/mediasession/: MediaActionReceiver.kt  MediaSessionCleanupService.kt  MediaSessionPlugin.kt
src-tauri/media-session/ios/: Package.swift
src-tauri/media-session/ios/Sources/: MediaSessionPlugin.swift
src-tauri/permissions/autogenerated/: reference.md
src-tauri/permissions/autogenerated/commands/: update_state.toml  update_timeline.toml
src-tauri/permissions/schemas/: schema.json
src-tauri/src/: android_signer.rs  image_thumbnail.rs  lib.rs  main.rs  media_session.rs
(+1764 files in other folders)
