[package]
name = "nostria"
version = "3.1.31"
description = "Nostria is a Nostr client with installable desktop bundles"
authors = ["Nostria Contributors"]
edition = "2021"
homepage = "https://nostria.app"
repository = "https://github.com/nostria-app/nostria"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nostria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
tauri-utils = "=2.8.3"

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-opener = "=2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.0"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
rustls = { version = "=0.23.37", default-features = false, features = ["std", "ring"] }
