[package]
name = "nostria"
version = "3.1.49"
description = "Nostria is a Nostr client with installable desktop bundles"
authors = ["Nostria Contributors"]
edition = "2021"
homepage = "https://nostria.app"
repository = "https://github.com/nostria-app/nostria"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nostria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
tauri-utils = "=2.8.3"
plist = "1.7.4"

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-opener = "=2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.0"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
rustls = { version = "=0.23.37", default-features = false, features = ["std", "ring"] }
tauri-plugin-deep-link = "=2.4.7"
tauri-plugin-single-instance = { version = "=2.4.0", features = ["deep-link"] }

# Native inline-image thumbnailing (Tauri desktop/mobile only).
# Downloads, EXIF-orients, and downscales feed images so WebKit retains small decoded
# bitmaps instead of full-resolution originals. Uses ring-based rustls via ureq to match
# the crypto provider installed in lib.rs and to avoid C/CMake build deps (aws-lc) on Android.
#
# Pinned to 0.25.5: it has the EXIF orientation API (ImageReader::into_decoder,
# ImageDecoder::orientation, DynamicImage::apply_orientation) but predates the newer
# convolution code in later 0.25.x patches that relies on the `slice_as_chunks` feature
# stabilized only in Rust 1.88. Pinning keeps the crate buildable on the toolchains used
# locally and in CI without forcing a Rust upgrade.
image = { version = "=0.25.5", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
ureq = { version = "2", features = ["tls"] }
base64 = "0.22"
